# safe_zone

./: .gitignore  CMakeLists.txt
feature/: zone_manager.feature
include/capture/: Capture_Loop_Utils.hpp
include/user_interface/: User_Interface.hpp
include/utils/: App_State.hpp  Point_Hash.hpp
include/zones/: Zone.hpp  Zone_Manager.hpp
linux_ver/: CMakeLists.txt
linux_ver/include/user_interface/: User_Interface.hpp
linux_ver/include/utils/: App_State.hpp
linux_ver/src/: main.cpp
linux_ver/src/capture/: Capture_Loop_Utils.cpp  Real_Time_Capture.cpp
linux_ver/src/zones/: Zone_Manager.cpp
src/: main.cpp
src/capture/: Capture_Loop_Utils.cpp  Real_Time_Capture.cpp
src/user_interface/: User_Interface.cpp
src/zones/: Zone.cpp  Zone_Manager.cpp
tests/: CMakeLists.txt  zone_manager_test.cpp  zone_test.cpp
windows_ver/: .gitignore  CMakeLists.txt
windows_ver/include/capture/: Real_Time_Capture.hpp
windows_ver/include/user_interface/: Input_Collector.hpp
windows_ver/include/zones/: Zone.hpp  Zone_Manager.hpp
windows_ver/src/: main.cpp
windows_ver/src/capture/: Real_Time_Capture.cpp
windows_ver/src/user_interface/: User_Interface.cpp
windows_ver/src/zones/: Zone.cpp  Zone_Manager.cpp
windows_ver/tests/zone_manager/: CMakeLists.txt
